@@ -311,24 +311,25 @@ public class TestDAG {
 
   @Test
   public void testCallerContext() {
-    DAG dag = DAG.create("dag1");
     try {
-      CallerContext callerContext = CallerContext.create("ctxt", "", "", "desc");
+      CallerContext.create("ctxt", "", "", "desc");
       Assert.fail("Expected failure for invalid args");
     } catch (Exception e) {
       // Expected
     }
     try {
-      CallerContext callerContext = CallerContext.create("", "desc");
+      CallerContext.create("", "desc");
       Assert.fail("Expected failure for invalid args");
     } catch (Exception e) {
       // Expected
     }
 
-    CallerContext callerContext;
-    callerContext = CallerContext.create("ctxt", "a", "a", "desc");
-    callerContext = CallerContext.create("ctxt", "desc");
-    callerContext = CallerContext.create("ctxt", null);
+    CallerContext.create("ctxt", "a", "a", "desc");
+    CallerContext.create("ctxt", null);
+
+    CallerContext callerContext = CallerContext.create("ctxt", "desc");
+    Assert.assertTrue(callerContext.toString().contains("desc"));
+    Assert.assertFalse(callerContext.contextAsSimpleString().contains("desc"));
 
   }
 
